@@ -34,6 +34,8 @@ Project("{8BB2217D-0F2D-49D1-97BC-3654ED321F3B}") = "Saritasa.Tools.Messages.Tes
 EndProject
 Project("{8BB2217D-0F2D-49D1-97BC-3654ED321F3B}") = "Saritasa.Tools.Tests", "test\Saritasa.Tools.Tests\Saritasa.Tools.Tests.xproj", "{647E7D34-C497-47D4-97CF-3B7245AB6BDD}"
 EndProject
+Project("{8BB2217D-0F2D-49D1-97BC-3654ED321F3B}") = "Saritasa.Tools.Mvc5", "src\Saritasa.Tools.Mvc5\Saritasa.Tools.Mvc5.xproj", "{6C773C8F-226C-454E-8656-3A6B9BF38476}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Any CPU = Debug|Any CPU
@@ -84,6 +86,10 @@ Global
 		{647E7D34-C497-47D4-97CF-3B7245AB6BDD}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{647E7D34-C497-47D4-97CF-3B7245AB6BDD}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{647E7D34-C497-47D4-97CF-3B7245AB6BDD}.Release|Any CPU.Build.0 = Release|Any CPU
+		{6C773C8F-226C-454E-8656-3A6B9BF38476}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{6C773C8F-226C-454E-8656-3A6B9BF38476}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{6C773C8F-226C-454E-8656-3A6B9BF38476}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{6C773C8F-226C-454E-8656-3A6B9BF38476}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -100,5 +106,6 @@ Global
 		{347E7D34-C497-47D4-97CF-3B7245AB6BDD} = {635DB5B1-86B3-4F5B-97A6-04C71D672296}
 		{84A546BA-C7BE-4CCC-8355-5E15502F6AD2} = {635DB5B1-86B3-4F5B-97A6-04C71D672296}
 		{647E7D34-C497-47D4-97CF-3B7245AB6BDD} = {635DB5B1-86B3-4F5B-97A6-04C71D672296}
+		{6C773C8F-226C-454E-8656-3A6B9BF38476} = {45D13EC5-88F3-403A-8148-0812C2796062}
 	EndGlobalSection
 EndGlobal
