@@ -1,0 +1,12 @@
+﻿{
+  "frameworks": {
+    "net452": {},
+    "net461": {}
+  },
+  "runtimes": {
+    "win": {}
+  },
+  "dependencies": {
+    "StyleCop.Analyzers": "1.0.0"
+  }
+}
