@@ -1,0 +1,32 @@
+{
+  "title": "Saritasa Tools for ASP.NET MVC 5",
+  "version": "0.1.0",
+  "authors": [ "Saritasa" ],
+  "description": "The package is a part of Saritasa Tools project. Saritasa.Tools.Mvc5 contains miscellaneous utils for ASP.NET MVC 5 framework.",
+  "copyright": "Saritasa 2015-2016",
+  "packOptions": {
+    "iconUrl": "https://raw.githubusercontent.com/Saritasa/SaritasaTools/master/icon.png",
+    "licenseUrl": "https://raw.githubusercontent.com/Saritasa/SaritasaTools/master/LICENSE",
+    "projectUrl": "https://github.com/Saritasa/SaritasaTools",
+    "requireLicenseAcceptance": false,
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/Saritasa/SaritasaTools"
+    },
+    "summary": "Tools for ASP.NET MVC 5.",
+    "tags": [ "mvc" ]
+  },
+  "dependencies": {
+    "Microsoft.AspNet.Mvc": "5.2.3"
+  },
+  "frameworks": {
+    "net452": {
+    },
+    "net461": {
+    }
+  },
+  "buildOptions": {
+    "keyFile": "../../tools/SaritasaTools.snk",
+    "xmlDoc": true
+  }
+}
